src/snapshots/barbaroja__mov__tests__instance_all_basic_moves-7.snap
---
source: src/mov.rs
expression: "Cube::SOLVED.mov_single(mov)"
---
Cube {
    corners: [
        LUF (1) is at RUF,
        LDF (2) is at LUF,
        RUF (2) is at RDF,
        RDF (1) is at LDF,
        RUB (0) is at RUB,
        LUB (0) is at LUB,
        RDB (0) is at RDB,
        LDB (0) is at LDB,
    ],
    edges: [
        FL (x) is at UF,
        FR (x) is at DF,
        UB (✓) is at UB,
        DB (✓) is at DB,
        UF (x) is at FR,
        BR (✓) is at BR,
        DF (x) is at FL,
        BL (✓) is at BL,
        RU (✓) is at RU,
        LU (✓) is at LU,
        RD (✓) is at RD,
        LD (✓) is at LD,
    ],
}
